--- a/Task_1/README
+++ b/Task_1/README
@@ -1,4 +1,4 @@
-#Elevate_Intern
+#Elevate_Intern_TASK_1
 1.)Correct the date format from year-mm-dd to dd-mm-yyyy
 2.)Remove the duplicate rows
 3.)Corrected column data types
